--- a/index.html
+++ b/index.html
@@ -8,20 +8,17 @@
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/ionicons.min.css">
 
-        <script
-                src="https://code.jquery.com/jquery-3.3.1.min.js"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
+        <script src="dist/vendor/jquery-3.3.1.min.js"></script>
+        <script src="dist/vendor/jquery-ui.min.js"></script>
+        <script src="dist/vendor/terminal-1.0.0.min.js"></script>
 
-        <script src="dist/vendor.js?v=1.0.1"></script>
-
-        <title>Desktop</title>
+        <title>Vuindows</title>
     </head>
     <body>
         <div id="app">
             <app></app>
         </div>
 
-        <script src="dist/app.js?v=1.0.1"></script>
+        <script src="dist/app.js?v=1.0.2"></script>
     </body>
 </html>
